@@ -32,10 +32,13 @@ Returns a list with the following components: \describe{
   user-provided relative formant frequencies, Hz}
   \item{ff_relative}{deviation of formant frequencies from those expected for
   a schwa, \% (e.g. if the first ff_relative is -25, it means that F1 is 25\%
-lower than expected for a schwa in this vocal tract)} }
+  lower than expected for a schwa in this vocal tract)}
+  \item{ff_relative_semitones}{deviation of formant frequencies from those expected for
+  a schwa, semitones}
+}
 }
 \description{
-This function performs several types of conceptually related conversion of
+This function performs several conceptually related types of conversion of
 formant frequencies in relation to the neutral schwa sound based on the
 one-tube model of the vocal tract. Case 1: if we know vocal tract length
 (VTL) but not formant frequencies, \code{schwa()} estimates formants
@@ -73,8 +76,8 @@ s_a
 # We get an estimate of VTL (s_a$vtl_apparent = 15.2 cm),
 #   same as with estimateVTL(formants_a)
 # We also get theoretical schwa formants: s_a$ff_schwa
-# And we get the difference (\%) in observed vs expected
-#   formant frequencies: s_a$ff_relative
+# And we get the difference (\% and semitones) in observed vs expected
+#   formant frequencies: s_a[c('ff_relative', 'ff_relative_semitones')]
 # [a]: F1 much higher than expected, F2 slightly lower
 
 formants_i = c(300, 2700, 3400, 4400, 5300, 6400)
